Generate Room resource
```console
yarn psy g:resource --sti-base-serializer --owning-model=Place v1/host/places/\{\}/rooms Room type:enum:room_types:Bathroom,Bedroom,Kitchen,Den,LivingRoom Place:belongs_to position:integer:optional deleted_at:datetime:optional
```

The `places/{}` (escaped to `places/\{\}` for the console) makes
rooms a nested resource within the places resource, which you can
see with `yarn psy routes`:

```console
yarn psy db:migrate
yarn psy routes
```
