# api/src/app/models/Room.ts
@@ -1,0 +1,30 @@
+import { Decorators } from '@rvoh/dream'
+import { DreamColumn, DreamSerializers } from '@rvoh/dream/types'
+import ApplicationModel from '@models/ApplicationModel.js'
+import Place from '@models/Place.js'
+
+const deco = new Decorators<typeof Room>()
+
+export default class Room extends ApplicationModel {
+  public override get table() {
+    return 'rooms' as const
+  }
+
+  public get serializers(): DreamSerializers<Room> {
+    return {
+      default: 'RoomSerializer',
+      summary: 'RoomSummarySerializer',
+    }
+  }
+
+  public id: DreamColumn<Room, 'id'>
+  public type: DreamColumn<Room, 'type'>
+  public position: DreamColumn<Room, 'position'>
+  public deletedAt: DreamColumn<Room, 'deletedAt'>
+  public createdAt: DreamColumn<Room, 'createdAt'>
+  public updatedAt: DreamColumn<Room, 'updatedAt'>
+
+  @deco.BelongsTo('Place', { on: 'placeId' })
+  public place: Place
+  public placeId: DreamColumn<Room, 'placeId'>
+}
